--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -27,10 +27,7 @@ setw -g automatic-rename off
 set -g history-limit 10000
 
 # Get mousey.
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Act more like Vim.
 set-window-option -g mode-keys vi
