--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -29,6 +29,9 @@ set -g history-limit 10000
 # Get mousey.
 set -g mouse on
 
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
 # Act more like Vim.
 set-window-option -g mode-keys vi
 bind h select-pane -L
