--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -54,5 +54,4 @@ set -g status-fg colour232
 
 set-option -g status-position top
 
-set -g status-right "#(pmset -g batt | awk 'NR==2 {gsub(/;/,\"\"\\); \
-  print (match($3,/^ch/\\) ? \"\ \":\"\"\\) $2}') | %d %h | %H:%M "
+set -g status-right "#(pmset -g batt | grep '\d\+%' | awk '{print $2}' | tr -d ';') | %d %h | %H:%M "
