Periodic check in

--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -1,5 +1,5 @@
 # Reattach to user namespace so that clipboard integration with OS X works.
-set -g default-command 'reattach-to-user-namespace -l zsh'
+set -g default-command 'reattach-to-user-namespace -l bash'
 
 set-window-option -g alternate-screen off
 set -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@,xterm*:smcup@:rmcup@'
@@ -14,9 +14,6 @@ set -g prefix C-z
 
 bind C-z last-window
 bind z   send-keys C-z
-
-# Use UTF-8.
-set-option -g status-utf8 on
 
 # Supposed to fix pausing in Vim.
 set-option -sg escape-time 1
@@ -54,4 +51,4 @@ set -g status-fg colour232
 
 set-option -g status-position top
 
-set -g status-right "#(pmset -g batt | grep '\d\+%' | awk '{print $2}' | tr -d ';') | %d %h | %H:%M "
+set -g status-right "%d %h | %H:%M "
