Italics in vim and tmux, update colors

--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -43,11 +43,11 @@ unbind '"'
 bind H split-window -v
 
 # Look good.
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Status bar.
-set -g status-bg colour5
-set -g status-fg colour232
+set -g status-bg colour56
+set -g status-fg colour255
 
 set-option -g status-position top
 
