--- a/rcm/tmux.conf
+++ b/rcm/tmux.conf
@@ -3,6 +3,7 @@ set -g default-command 'reattach-to-user-namespace -l bash'
 
 set-window-option -g alternate-screen off
 set -g terminal-overrides 'rxvt-unicode*:sitm@,ritm@,xterm*:smcup@:rmcup@'
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 set -g update-environment 'SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION'
 
 # Reload ~/tmux.conf.
@@ -51,4 +52,4 @@ set -g status-fg colour255
 
 set-option -g status-position top
 
-set -g status-right "%d %h | %H:%M "
+set -g status-right "%d %h | %l:%M "
